Docs: Update JVM arguments to recommend G1GC instead of ZGC for Android/PojavLauncher