@@ -16,11 +16,11 @@ Un mod NeoForge 1.21.1 concu pour optimiser Minecraft Java sur les telephones An
 
 ## Important : Arguments JVM (Anti-Freeze & ZGC)
 
-**CRITIQUE POUR ÉVITER LES FREEZES (Java 21)** : Si vous avez des freezes réguliers de plusieurs secondes avec la RAM qui monte et descend (GC à 90%), ajoutez absolument ces arguments dans PojavLauncher pour activer le Z Garbage Collector :
-👉 `-XX:+UseZGC -XX:+ZGenerational`
+**CRITIQUE POUR ÉVITER LES FREEZES (PojavLauncher / Android)** : Android bloque le ZGC (Z Garbage Collector) pour des raisons de sécurité mémoire (SELinux). Pour éviter les énormes freezes causés par le nettoyage de la RAM, vous devez utiliser le **G1GC** avec ces arguments d'optimisation spécifiques :
+👉 `-XX:+UseG1GC -XX:MaxGCPauseMillis=30 -XX:G1NewSizePercent=20 -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=15`
 
-**Consultez notre [Tableau des Configurations RAM & CPU (doc/jvm-args.md)](doc/jvm-args.md) pour obtenir la commande exacte adaptée à la puissance de votre téléphone.**
-Vous y trouverez les paramètres pour 4 Go, 6 Go, 8 Go+ ainsi que les explications sur la chauffe du CPU (`MaxGCPauseMillis`).
+**Consultez notre [Tableau des Configurations RAM & CPU (doc/jvm-args.md)](doc/jvm-args.md) pour obtenir plus de détails sur l'optimisation G1GC.**
+Vous y trouverez les explications sur la réduction des micro-pauses (`MaxGCPauseMillis`).
 
 ---
 
@@ -90,11 +90,11 @@ A NeoForge 1.21.1 mod designed to optimize Minecraft Java on Android phones (Ame
 
 ## Important: JVM Arguments (Anti-Freeze & ZGC)
 
-**CRITICAL TO AVOID FREEZES (Java 21)**: If you experience regular multi-second freezes where RAM usage drops sharply (GC at 90%), you must add these arguments in PojavLauncher to enable the Z Garbage Collector:
-👉 `-XX:+UseZGC -XX:+ZGenerational`
+**CRITICAL TO AVOID FREEZES (PojavLauncher / Android)**: Android blocks ZGC (Z Garbage Collector) for memory security reasons (SELinux). To avoid huge freezes caused by RAM cleanup, you must use **G1GC** with these specific optimization arguments:
+👉 `-XX:+UseG1GC -XX:MaxGCPauseMillis=30 -XX:G1NewSizePercent=20 -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=15`
 
-**Please refer to our [RAM & CPU Configurations Table (doc/jvm-args.md)](doc/jvm-args.md) to get the exact command suited for your phone's power.**
-You will find settings for 4 GB, 6 GB, 8 GB+ as well as explanations on CPU heating and GC pauses (`MaxGCPauseMillis`).
+**Please refer to our [RAM & CPU Configurations Table (doc/jvm-args.md)](doc/jvm-args.md) to get more details on G1GC optimization.**
+You will find explanations on reducing micro-pauses (`MaxGCPauseMillis`).
 
 ---
 
